loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:3: error: '(' expected but identifier found.
while trouve {
      ^